--- a/submission/index.html
+++ b/submission/index.html
@@ -16,7 +16,7 @@
 <hr style="width:50%;text-align:center">
 <p>9.Below is a horizontal line which is 100 pixels wide</p>
 <hr style="width:100px;text-align:center">
-<div><div>10.Now this is a little tough. The image is displayed on the right side and the text is displayed on the left side. This is done using the "img" tag here,but you can use other methods to achieve the same output.The image has to be 500 pixels wide.</div><img src="SmilingCat.png" width="500" align="right"/><div></div>
+<div><div ><img src="SmilingCat.png" width="500px" align="right"/></div><div class="inline-block">10.Now this is a little tough. The image is displayed on the right side and the text is displayed on the left side. This is done using the "img" tag here,but you can use other methods to achieve the same output.The image has to be 500 pixels wide.</div></div>
 <div><br/><a href="https://www.google.com">11.Click here to go to Google</a></div>
 <br><div>12.Lists:<br/>
     <ol type="A">
